# AuthRadar

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_scanner.yml
.github/workflows/: ci.yml
authradar/: __init__.py  __main__.py  api.py  engine.py  jobs.py
authradar/cli/: __init__.py  commands.py  main.py
authradar/core/: __init__.py  auth_flow_detector.py  browser.py  config.py  crawler.py  endpoint_discovery.py  exceptions.py  http.py  models.py  parsing.py  plugin_loader.py  request_engine.py  scanner_base.py
authradar/reporting/: __init__.py  base.py  html_report.py  json_report.py  markdown_report.py
authradar/scanner/: __init__.py  account_enum_detector.py  csrf_auth_analyzer.py  heuristics.py  jwt_analyzer.py  login_detector.py  mfa_validator.py  otp_analyzer.py  rate_limit_tester.py  reset_flow_analyzer.py  session_checker.py
authradar/web/: app.js  index.html  styles.css
docs/: architecture.md  checks.md  development.md  usage.md  writing-plugins.md
examples/: README.md  programmatic_scan.py
tests/: __init__.py  apps.py  conftest.py  helpers.py  test_account_enum_detector.py  test_active_scanners.py  test_adversarial.py  test_api.py  test_auth_flow_detector.py  test_cli.py  test_core_config.py  test_core_http.py  test_core_models.py  test_core_parsing.py  test_crawler.py  test_csrf_auth_analyzer.py  test_endpoint_discovery.py  test_engine.py  test_jobs.py  test_jwt_analyzer.py  test_login_detector.py  test_mfa_validator.py  test_otp_analyzer.py  test_plugin_loader.py  test_rate_limit_tester.py  test_reporting.py  test_request_engine.py  test_reset_flow_analyzer.py  test_session_checker.py
