[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "authradar"
version = "0.1.0"
description = "Asynchronous authentication security auditing framework for modern web applications."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AuthRadar Contributors" }]
keywords = [
    "security",
    "authentication",
    "audit",
    "scanner",
    "appsec",
    "jwt",
    "session",
    "csrf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "playwright>=1.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "python-multipart>=0.0.9",
]

[project.scripts]
authradar = "authradar.cli.main:main"

[project.urls]
Homepage = "https://github.com/authradar/authradar"
Repository = "https://github.com/authradar/authradar"
Issues = "https://github.com/authradar/authradar/issues"
Documentation = "https://github.com/authradar/authradar/tree/main/docs"

[tool.setuptools.packages.find]
include = ["authradar*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
authradar = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["authradar", "tests"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "ASYNC",# flake8-async
    "S",    # flake8-bandit
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "TID",  # flake8-tidy-imports
    "PL",   # pylint
]
ignore = [
    "PLR2004", # magic value comparison - common and readable in detection thresholds
    "PLR0913", # too many arguments - analysis functions take several signals
    "S101",    # assert usage handled per-file for tests
    # AuthRadar is an authentication tool: identifiers/enum values legitimately
    # contain the word "password". Secrets are never hardcoded (read from env).
    "S105",    # possible hardcoded password (false positives on field/enum names)
    "S106",    # possible hardcoded password func arg (same rationale)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "PLR2004", "ARG001", "ARG002"]
"authradar/_testapps/**" = ["S105", "S106", "S104"]

[tool.ruff.lint.isort]
known-first-party = ["authradar"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true
show_error_codes = true
exclude = ["build/", "dist/", "\\.venv/"]

[[tool.mypy.overrides]]
module = ["playwright.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["error::DeprecationWarning"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
# B105/B106: AuthRadar legitimately uses "password"-named identifiers and enum
# values; no real secrets are hardcoded (credentials come from env/CLI input).
skips = ["B105", "B106"]
